<resources>
    <string name="shr_app_name">Dakwah &amp; Sosial</string>
    <string name="app_name">Dakwah &amp; Sosial</string>
    <string name="shr_compose_title">Buat Publikasi</string>
    <string name="shr_compose_judulpost">Judul</string>
    <string name="shr_compose_konten">Kontent</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_button_next">Next</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="shr_error_password">Password must contain at least 8 characters.</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>
    <string name="shr_upload_foto">Foto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Kirim</string>

    <string name="lorem_ipsum">sample text saja untuk dialog</string>

    <string name="title_activity_browser">browser</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>



    <!--Notification -->
    <string name="channel_name">mobile.omandotkom.dakwahsosial</string>

    <string name="channel_description">Dakwah &amp; Sosial Description</string>
    <string name="notification_title">Ada Artikel Baru</string>
    <string name="default_notification_channel_id" translatable="false">dakwah_default_channel</string>


    <!--Warning Messages -->
    <string name="title_warning">Anda belum menentukan judul.</string>
    <string name="content_warning">Anda belum memasukan isi artikel.</string>

    <!--Create Post -->
    <string name="Create">Tulis</string>
</resources>
